--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 
   <script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.2.min.js"><\/script>')</script
   <script defer src="js/plugins.js"></script>
-  <script src="js/d3/d3.js"></script>
+  <script src="js/d3/d3.min.js"></script>
+  <script src="js/d3/d3.time.min.js"></script>
+  <script src="js/moment.min.js"></script>
   <script src="js/d3js.js"></script>
   
 </body>
