--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/eatingstats.css">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/eatingstats.css">
 
-  <script src="js/libs/modernizr-2.0.6.min.js"></script>
+  <script src="/js/libs/modernizr-2.0.6.min.js"></script>
 </head>
 
 <body>
@@ -22,12 +22,11 @@
     <h1>eatingstats</h1>
   </div>
 
-  <script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.2.min.js"><\/script>')</script
-  <script defer src="js/plugins.js"></script>
-  <script src="js/d3/d3.min.js"></script>
-  <script src="js/d3/d3.time.min.js"></script>
-  <script src="js/moment.min.js"></script>
-  <script src="js/d3js.js"></script>
+  <script>window.jQuery || document.write('<script src="/js/libs/jquery-1.6.2.min.js"><\/script>')</script
+  <script defer src="/js/plugins.js"></script>
+  <script src="/js/libs/d3.v2.min.js"></script>
+  <script src="/js/libs/moment.min.js"></script>
+  <script src="/js/d3js.js"></script>
   
 </body>
 </html>
